assets/css/style.css
/* Google fonts import */
@import url('https://fonts.googleapis.com/css2?family=Exo&family=Teko:wght@300..700&display=swap');

/* Asterisk wildcard selector to override default styles added by the browser */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* General styles */
body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    /* Generic project styles */
    color: #252525;
    font-family: "Exo", sans-serif;
}

h1 {
    font-family: "Teko", sans-serif;
    text-transform: uppercase;
    letter-spacing: 1px;
}

a {
    color: #252525;
}

/* Header */
header {
    background-color: #f4d7da;
    padding: 0 1rem;
    position: fixed;
    z-index: 99;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: baseline;
}

header a {
    text-decoration: none;
    color: inherit;
}

/* Hidden span for accessibilty with screen readers for dropdown menu */
.sr-only {
    border: 0;
    clip: rect(0 0 0 0);
    -webkit-clip-path: polygon(0px 0px, 0px 0px, 0px 0px);
    clip-path: polygon(0px 0px, 0px 0px, 0px 0px);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
    white-space: nowrap;
}

#menu {
    font-size: 110%;
    letter-spacing: 3px;
    list-style-type: none;
}

#menu>li {
    margin-bottom: 1em;
}

.active {
    border-bottom: 1px solid #252525;
}

/* Navbar styles with dropdown toggle */
nav {
    position: absolute;
    background-color: #f4d7da;
    width: 100%;
    left: 0;
    padding: 0 1rem;
    display: none;
    top: 100%;
}

/* Nav toggle */
#nav-toggle:checked~nav {
    display: block;
}

#nav-toggle {
    display: none;
}

.nav-toggle-label {
    font-size: 1.7rem;
}

/* Main content */
main {
    background-color: #f4d7da;
    /* Make main element take up any surplus space to push footer down */
    flex: 1 0 auto;
    margin-top: 45px;
    /* Enable flex properties for child elements */
    display: flex;
    flex-direction: column;
}

/* Hero section */
#hero {
    height: 550px;
    width: 100%;
    background: url(../images/hero-image.webp) no-repeat center center/cover;
    position: relative;
    display: flex;
    justify-content: center;
}

#hero-button {
    position: absolute;
    bottom: 50px;
}

.hero-book-now {
    background-color: #f4d7da;
    font-size: 110%;
    font-weight: bold;
    padding: 5px 20px;
    box-shadow: 0 3px 3px #3a3a3a;
    border: none;
    border-radius: 5px;
}

button a {
    color: #252525;
}

div button:hover {
    background-color: #ea6676;
    box-shadow: none;
}

/* About us section */

#why-nail-care,
#about-us, #testimonials {
    margin: 20px 20px;
    padding: 10px 20px;
    border: 1px solid #252525;
    box-shadow: 3px 3px 5px;
    border-radius: 5px;
    text-align: center;
}

#nail-care-image, #nail-treatment-image {
    display: flex;
    justify-content: center;
    align-items: center;
}

#nail-care-cover-bg {
    background: url(../images/nail-care.webp) no-repeat center center/cover;
    height: 90vw;
    width: 60vw;
    margin: 20px 20px;
    max-width: 240px;
    max-height: 360px;
    border-radius: 5px;
}

#nail-treatment-cover-bg {
    background: url(../images/nail-treatment.webp) no-repeat center center/cover;
    height: 90vw;
    width: 60vw;
    margin: 20px 20px;
    max-width: 240px;
    max-height: 360px;
    border-radius: 5px;
}

#testimonials div {
    border: 1px ridge #fff6f6;
    border-radius: 5px;
    padding: 10px 10px;
    margin-bottom: 20px;
}

#about-salon h3 {
    text-align: center;
}

#salon-reasons p {
    padding-bottom: 20px;
}

/* Services Page */
#services-image {
    height: 300px;
    width: 100%;
    background: url(../images/services-page-image.webp) no-repeat center center/cover;
    position: relative;
    display: flex;
    justify-content: center;
    background-position-y: 54%;
    padding: 20px 10% 20px 10%;
    flex-grow: 1;
}

#overlay-text {
    position: absolute;
    top: 37.5%;
    left: 20%;
    background-color: rgba(255, 255, 255, 0.6);
    color: #252525;
    width: 60%;
    text-align: center;
    padding: 20px 30px;
    font-size: 110%;
    font-weight: bold;
    border: none;
    border-radius: 3px;
}

#manicure-menu,
#pedicure-menu {
    margin: 20px 20px;
    padding: 10px 20px;
    border: 1px solid #252525;
    box-shadow: 3px 3px 5px;
    border-radius: 5px;
}

.content-wrapper h3, h4 {
    padding: 20px 0 20px 0;
    font-size: 180%;
}

.content-wrapper li {
    list-style-type: none;
    padding-bottom: 20px;
}

li em {
    font-size: smaller;
}

#menu-image {
    display: flex;
    justify-content: center;
    align-items: center;
}

#menu-cover-bg {
    background: url(../images/servicemenu-paintdrip.webp) no-repeat center center/cover;
    height: 90vw;
    width: 60vw;
    margin-bottom: 20px;
    max-width: 320px;
    max-height: 480px;
    border-radius: 5px;
}

/* Gallery Page */
#photos img {
    width: 100%;
    border-radius: 10px;
}

/* Book Now Page */
#booknow {
    background-image: url("../images/booknow-polish.webp");
    background-size: cover;
    background-position: 53%;
    padding: 20px 10% 20px 10%;
    flex-grow: 1;
}

#booknow-form {
    color: #252525;
    background-color: rgba(255, 255, 255, 0.6);
    padding: 30px;
}

#booknow-form > h2, #booknow-form
> h3 {
    color: #252525;
    margin-bottom: 20px;
}

.text-input {
    color: #252525;
    background-color: transparent;
    width: 100%;
    height: 30px;
    margin: 5px 0 20px 0;
    border: 1px solid #252525;
    border-radius: 3px;
    padding: 0 5px;
}

#message {
    height: 120px;
}

.radio-buttons div {
    margin-left: 15px;
    margin-bottom: 15px;
}

.send-button {
    margin-top: 20px;
    padding: 15px 32px;
    font-size: 100%;
    background-color: transparent;
    color: #252525;
    border: 2px solid #252525;
    border-radius: 3px;
}

#contact-us {
    color: #252525;
    background-color: #f4d7da;
    padding: 30px;
}

#salon-hours {
    text-align: center;
    margin-bottom: 30px;
}

#salon-hours h2 {
    color: #252525;
    margin-bottom: 20px;
}

#salon-hours li {
    list-style-type: none;
}

#woohoo-contact div {
    margin-bottom: 20px;
    text-align: center;
}

/* Footer */
footer {
    background-color: #f4d7da;
}

#social-networks {
    text-align: center;
    padding: 20px 0;
    display: flex;
    justify-content: space-evenly;
    list-style-type: none;
}

#social-networks i {
    font-size: 150%;
    padding: 5%;
    color: #252525;
}

#social-networks i:hover {
    color: #ea6676;
}

#contact-details {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    margin: 5px 10px 30px;
}

#contact-details p {
    text-align: center;
}

/* Media query - Large or landscape phones (576px and up) */
@media screen and (min-width: 576px) {
    #photos {
        column-count: 2;
        column-gap: 0;
    }
}

/* Media query - Tablets and larger (768px and up) */
@media screen and (min-width: 768px) {

    /* Header */
    nav {
        display: block;
        position: relative;
        width: fit-content;
        padding-right: .1rem;
        background-color: rgba(244, 215, 218, 0);
    }

    #menu {
        display: flex;
    }

    #menu>li:not(:last-child) {
        border-right: 1px solid #252525;
    }

    #menu>li>a {
        padding: 7px 12px 0;
    }

    .nav-toggle-label {
        display: none;
    }

    #logo {
        font-size: 250%;
        line-height: 75px;
    }

    /* Main Content */

    main {
        /* Push main content down to accommodate larger heading */
        margin-top: 74px;
    }

    #care-div, #treatment-div {
        display: flex;
        flex-direction: row;
        justify-content: center;
        align-items: center;
    }

    #about-us {
        order: 1;
    }

    #nail-treatment-image {
        order: 0;
    }

    /* Services Page */
    #services-image {
        font-size: 160%;
    }

    /* Gallery */

    #photos {
        column-count: 3;
        column-gap: 0;
    }

    /* Book Now page */

    .text-input:hover {
        border-color: #ea6676;
    }

    .send-button:hover {
        background-color: #ea6676;
    }
}

/* Media query - Laptops and desktop (992px and up) */
@media screen and (min-width: 992px) {

    /* Header */
    #menu a:hover {
        border-bottom: 1px solid #252525;
    }

    /* Services Page */
    #services-image {
        height: 450px;
    }

    #content-wrapper {
        display: flex;
        flex-direction: row;
        justify-content: center;
        flex: 1;
    }

    #manicure-menu {
        order: 0;
    }

    #pedicure-menu {
        order: 1;
    }

    /* Gallery */
    #photos {
        column-count: 4;
    }

    /* Footer */
    #social-networks {
        justify-content: center;
        gap: 110px;
    }
}

/* Media query - Desktop and larger (1200px and up) */
@media screen and (min-width: 1200px) {

    /* Main Content */

    /* Landing Page */
    #salon-reasons {
        display: flex;
        flex-direction: row;
        justify-content: center;
        align-items: center;
    }

    #care-div, #treatment-div {
        width: 50%;
    }

    #why-nail-care {
        order: 1;
        align-self: start;
    }

    #about-us {
        order: 2;
        align-self: end;
    }

    #nail-care-image {
        order: 0;
    }

    #nail-treatment-image {
        order: 3;
    }
}

